hphp/hack/test/typecheck/nameof/reified3.php.exp
ERROR: File "reified3.php", line 8, characters 26-27:
`nameof` cannot be used with a generic type (Parsing[1002])
